Make sure hint labels >9 won't wrap to multiple lines. Closes #39

--- a/src/content.sass
+++ b/src/content.sass
@@ -29,6 +29,7 @@ $shadow_drop: rgba(0, 0, 0, 0.28) 0 1px 2px
   font: 13px/1 "Helvetica Neue", Helvetica, Arial, sans-serif
   letter-spacing: 1px
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2)
+  white-space: nowrap
 
 .KEYJUMP_filtered
   .KEYJUMP_hint
